--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ name: Deploy
 on:
   push:
     branches: [master]
+    paths: 'front/**'
 # 執行的工作
 jobs:
   # 工作名稱
@@ -30,4 +31,3 @@ jobs:
         with:
           branch: gh-pages
           folder: front/dist
-          
