--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "chart.js": "^4.2.0",
+    "gsap": "^3.11.4",
     "is-youtube-url": "^1.0.5",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.0.2",
